--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 
 #mybatis
-mybatis.type-aliases-package=com.example.serious.demo.domain
-mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.configuration.default-fetch-size=100
-mybatis.mapperLocation=classpath.com.example.serious.demo/dao/*.xml
+#mybatis.type-aliases-package=com.example.serious.demo.domain
+#mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.configuration.default-fetch-size=100
+#mybatis.mapperLocation=classpath.com.example.serious.demo/dao/*.xml
 #druid
 spring.datasource.url=jdbc:mysql://localhost:3306/
 spring.datasource.username=root
@@ -27,3 +27,6 @@ redis.password=root
 redis.poolMaxTotal=10
 redis.poolMaxIdle=10
 redis.poolMaxWait=3
+
+logging.level.com.example.serious.demo.mapper=DEBUG
+logging.file.name=logs/log.log
