--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,10 @@
             <artifactId>tika-parsers</artifactId>
             <version>0.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
 <!--    <build>
