--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>HttpClient</artifactId>
-            <version>4.5.12</version>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
