【nacos】 读取配置信息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,7 @@ redis.password=root
 redis.poolMaxTotal=10
 redis.poolMaxIdle=10
 redis.poolMaxWait=3
-
 logging.level.com.example.serious.demo.mapper=DEBUG
 logging.file.name=logs/log.log
+nacos.config.server-addr=114.115.239.109:8847
+nacos.discovery.server-addr=114.115.239.109:8847
