【elasticsearch】 使用ElasticsearchRestTemplate 实现自定义查询

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,10 @@ redis.password=root
 redis.poolMaxTotal=10
 redis.poolMaxIdle=10
 redis.poolMaxWait=3
-
 logging.level.com.example.serious.demo.mapper=DEBUG
 logging.file.name=logs/log.log
+spring.elasticsearch.rest.username=elastic
+spring.elasticsearch.rest.password=elastic
+spring.elasticsearch.rest.uris=http://114.115.239.109:9200
+spring.elasticsearch.rest.connection-timeout=1s
+spring.elasticsearch.rest.read-timeout=30s
