--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
-server.port=8080
+spring.profiles.active=dev
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 
