--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,34 +3,14 @@ spring.mvc.view.suffix=.html
 server.port=8080
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
-
-#mybatis
-#mybatis.type-aliases-package=com.example.serious.demo.domain
-#mybatis.configuration.map-underscore-to-camel-case=true
-#mybatis.configuration.default-fetch-size=100
-#mybatis.mapperLocation=classpath.com.example.serious.demo/dao/*.xml
-#druid
-spring.datasource.url=jdbc:mysql://localhost:3306/
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.filters=stat
-spring.datasource.maxActive=2
-spring.datasource.initialSize=1
-spring.datasource.maxWait=60000
-#redis
-redis.host=localhost
-redis.port=6379
-redis.timeout=3
-redis.password=root
-redis.poolMaxTotal=10
-redis.poolMaxIdle=10
-redis.poolMaxWait=3
 logging.level.com.example.serious.demo.mapper=DEBUG
 logging.file.name=logs/log.log
 spring.elasticsearch.rest.username=elastic
-spring.elasticsearch.rest.password=Aa123456!
+spring.elasticsearch.rest.password=elastic
 spring.elasticsearch.rest.uris=http://114.115.239.109:9200
 spring.elasticsearch.rest.connection-timeout=1s
 spring.elasticsearch.rest.read-timeout=30s
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=0
+spring.application.name=testRedis
