--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -8,6 +8,8 @@ spring:
     nacos:
       discovery:
         server-addr: 114.115.239.109:8847    #注册中心地址
+        group: DEFAULT_GROUP
+        namespace: c38e9f06-a97f-4c9a-b0f2-857e60ab804c
       config:
         server-addr: 114.115.239.109:8847   #配置中心地址
         file-extension: yaml  #后缀名
